# rules_rust

./: BUILD.bazel
bindgen/: BUILD.bazel
bindgen/raze/: BUILD.bazel
cargo/: BUILD.bazel
cargo/bootstrap/: BUILD.bazel
cargo/cargo_build_script_runner/: BUILD.bazel
cargo/private/: BUILD.bazel
crate_universe/: BUILD.bazel
crate_universe/private/: BUILD.bazel  crates_vendor.bzl  generate_utils.bzl
crate_universe/src/: config.rs  context.rs  metadata.rs  rendering.rs
docs/: BUILD.bazel
examples/: BUILD.bazel
examples/bindgen/: BUILD.bazel
examples/cargo/: BUILD.bazel
examples/crate_universe/: BUILD.bazel
examples/env_locations/: BUILD.bazel
examples/ffi/: BUILD.bazel
examples/fibonacci/: BUILD.bazel
examples/flag_locations/: BUILD.bazel
examples/hello_lib/: BUILD.bazel
examples/hello_runfiles/: BUILD.bazel
examples/hello_world/: BUILD.bazel
examples/per_platform_printer/: BUILD.bazel
examples/proc_macro/: BUILD.bazel
examples/proto/: BUILD.bazel
examples/sys/: BUILD.bazel
examples/version_stamping/: BUILD.bazel
examples/wasm/: BUILD.bazel
proto/: BUILD.bazel
proto/patches/: BUILD.bazel
proto/raze/: BUILD.bazel
rust/: BUILD.bazel
rust/platform/: BUILD.bazel
rust/private/: BUILD.bazel
rust/settings/: BUILD.bazel
rust/toolchain/: BUILD.bazel
test/: BUILD.bazel
test/build_env/: BUILD.bazel
test/cargo_build_script/: BUILD.bazel
test/chained_direct_deps/: BUILD.bazel
test/clippy/: BUILD.bazel
test/load_arbitrary_tool/: BUILD.bazel
test/rust/: BUILD.bazel
util/: BUILD.bazel
wasm_bindgen/: BUILD.bazel
(+33 files in other folders)
